# hass-solar-window-system

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .ruff.toml  CHANGELOG.md  CLAUDE.md  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_ANALYSIS.md  QUALITY_GATE.md  README.md  REFACTORING_SUGGESTIONS.md  TEST_COVERAGE_ANALYSIS.md  debug_real_problem.py  debug_test.py  hacs.json  performance_test.py  pyproject.toml  pyrightconfig.json  pytest.ini  refactoring_analysis.md  release-please-config.json  requirements-test.txt  requirements.txt  requirements_test.txt  test_fix.py  test_real_resolver.py  test_resolver_e2e.py  test_runner.py  test_string_conversion.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.git-hooks/: README.md  commit-msg
.github/: copilot-instructions.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: ci-release.yml  ci.yaml  commit-lint.yml  coverage.yml  lint.yml  release.yaml  release.yml  (+3 more)
config/: configuration.yaml
custom_components/: __init__.py
docs/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  USER_GUIDE.md  calculator.md  sub-entries-konzept.md
scripts/: README.md  develop  ha_language_manager.py  install-hooks.bat  install-hooks.sh  kill_hass  quality-gate.bat  quality-gate.sh  run-homeassistant.sh  setup  setup-dev.bat  setup-dev.sh  setup-homeassistant-test.bat  setup-homeassistant-test.sh
tests/: README.md  TESTING.md  TODO.md  __init__.py  _test_calculator.py  _test_flow.py  _test_init.py  _test_sensor.py  conftest.py  constants.py  helpers.py  mocks.py  test_binary_sensor.py  test_binary_sensor_platform.py  test_calculation.py  test_calculator.py  test_calculator_flow_based.py  test_comprehensive_expected_str_fix.py  test_config_flow.py  test_config_flow_duplicate.py  test_config_flow_global.py  test_config_flow_import.py  test_config_flow_invalid_value.py  test_config_flow_window.py  test_config_inheritance.py  test_const.py  test_coordinator.py  test_coordinator_integration.py  test_data.py  test_debug_sensor.py  test_default_values_present.py  test_diagnostics.py  test_entity_creation.py  test_entity_id_generation.py  test_expected_str_fix.py  test_flow.py  test_global_config.py  test_global_config_entity_id_format.py  test_global_config_registry_ids.py  test_group_flow.py  (+32 more)
(+146 files in other folders)
