[project]
name = "solar_window_system"
version = "2.1.3"
description = "Solar window system custom component for Home Assistant"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}

# Report missing imports as warnings instead of errors
reportMissingImports = "warning"

# Report missing type stubs as warnings
reportMissingTypeStubs = "warning"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["F401"]  # Allow unused imports (needed for type hints in tests)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-p no:langsmith --allow-hosts=localhost,127.0.0.1"